--- a/docs/release-notes/v1.27.X.md
+++ b/docs/release-notes/v1.27.X.md
@@ -11,6 +11,8 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.27.11+k3s1](v1.27.X.md#release-v12711k3s1) | Feb 29 2024| [v1.27.11](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#v12711) | [v0.11.4](https://github.com/k3s-io/kine/releases/tag/v0.11.4) | [3.44.0](https://sqlite.org/releaselog/3_44_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2.27](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2.27) | [v1.1.12-k3s1](https://github.com/k3s-io/runc/releases/tag/v1.1.12-k3s1) | [v0.24.2](https://github.com/flannel-io/flannel/releases/tag/v0.24.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.26](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.26)  |
+| [v1.27.10+k3s2](v1.27.X.md#release-v12710k3s2) | Feb 06 2024| [v1.27.10](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#v12710) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2.27](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2.27) | [v1.1.12-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.1.12-k3s1) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.27.9+k3s1](v1.27.X.md#release-v1279k3s1) | Dec 27 2023| [v1.27.9](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#v1279) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2.27](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2.27) | [v1.1.10](https://github.com/opencontainers/runc/releases/tag/v1.1.10) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.27.8+k3s2](v1.27.X.md#release-v1278k3s2) | Dec 07 2023| [v1.27.8](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#v1278) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.7-k3s1.27](https://github.com/k3s-io/containerd/releases/tag/v1.7.7-k3s1.27) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.27.7+k3s2](v1.27.X.md#release-v1277k3s2) | Nov 08 2023| [v1.27.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#v1277) | [v0.10.3](https://github.com/k3s-io/kine/releases/tag/v0.10.3) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.7-k3s1.27](https://github.com/k3s-io/containerd/releases/tag/v1.7.7-k3s1.27) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
@@ -24,6 +26,64 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.27.11+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.11+k3s1)
+<!-- v1.27.11+k3s1 -->
+
+This release updates Kubernetes to v1.27.11, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#changelog-since-v12710).
+
+### Changes since v1.27.10+k3s2:
+
+* Chore: bump Local Path Provisioner version [(#9427)](https://github.com/k3s-io/k3s/pull/9427)
+* Bump cri-dockerd to fix compat with Docker Engine 25 [(#9291)](https://github.com/k3s-io/k3s/pull/9291)
+* Auto Dependancy Bump [(#9420)](https://github.com/k3s-io/k3s/pull/9420)
+* Runtimes refactor using exec.LookPath [(#9430)](https://github.com/k3s-io/k3s/pull/9430)
+  * Directories containing runtimes need to be included in the $PATH environment variable for effective runtime detection.
+* Changed how lastHeartBeatTime works in the etcd condition [(#9425)](https://github.com/k3s-io/k3s/pull/9425)
+* Allow executors to define containerd and docker behavior [(#9253)](https://github.com/k3s-io/k3s/pull/9253)
+* Update Kube-router to v2.0.1 [(#9405)](https://github.com/k3s-io/k3s/pull/9405)
+* Backports for 2024-02 release cycle [(#9463)](https://github.com/k3s-io/k3s/pull/9463)
+* Bump flannel version + remove multiclustercidr [(#9407)](https://github.com/k3s-io/k3s/pull/9407)
+* Enable longer http timeout requests [(#9445)](https://github.com/k3s-io/k3s/pull/9445)
+* Test_UnitApplyContainerdQoSClassConfigFileIfPresent [(#9441)](https://github.com/k3s-io/k3s/pull/9441)
+* Support PR testing installs [(#9470)](https://github.com/k3s-io/k3s/pull/9470)
+* Update Kubernetes to v1.27.11 [(#9491)](https://github.com/k3s-io/k3s/pull/9491)
+* Fix drone publish for arm [(#9509)](https://github.com/k3s-io/k3s/pull/9509)
+* Remove failing Drone step [(#9515)](https://github.com/k3s-io/k3s/pull/9515)
+* Restore original order of agent startup functions [(#9546)](https://github.com/k3s-io/k3s/pull/9546)
+* Fix netpol startup when flannel is disabled [(#9579)](https://github.com/k3s-io/k3s/pull/9579)
+
+-----
+## Release [v1.27.10+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.27.10+k3s2)
+<!-- v1.27.10+k3s2 -->
+
+This release updates Kubernetes to v1.27.10, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.27.md#changelog-since-v1279).
+
+**Important Notes**
+
+Addresses the runc CVE: [CVE-2024-21626](https://nvd.nist.gov/vuln/detail/CVE-2024-21626) by updating runc to v1.1.12.
+
+### Changes since v1.27.9+k3s1:
+
+* Add a retry around updating a secrets-encrypt node annotations [(#9124)](https://github.com/k3s-io/k3s/pull/9124)
+* Added support for env *_PROXY variables for agent loadbalancer [(#9117)](https://github.com/k3s-io/k3s/pull/9117)
+* Wait for taint to be gone in the node before starting the netpol controller [(#9176)](https://github.com/k3s-io/k3s/pull/9176)
+* Etcd condition [(#9182)](https://github.com/k3s-io/k3s/pull/9182)
+* Backports for 2024-01 [(#9211)](https://github.com/k3s-io/k3s/pull/9211)
+* Move proxy dialer out of init() and fix crash [(#9220)](https://github.com/k3s-io/k3s/pull/9220)
+* Pin opa version for missing dependency chain [(#9217)](https://github.com/k3s-io/k3s/pull/9217)
+* Etcd node is nil [(#9229)](https://github.com/k3s-io/k3s/pull/9229)
+* Update to v1.27.10 and Go 1.20.13 [(#9261)](https://github.com/k3s-io/k3s/pull/9261)
+* Use `ipFamilyPolicy: RequireDualStack` for dual-stack kube-dns [(#9270)](https://github.com/k3s-io/k3s/pull/9270)
+* Backports for 2024-01 k3s2 [(#9337)](https://github.com/k3s-io/k3s/pull/9337)
+  * Bump runc to v1.1.12 and helm-controller to v0.15.7
+  * Fix handling of bare hostname or IP as endpoint address in registries.yaml
+* Bump helm-controller to fix issue with ChartContent [(#9347)](https://github.com/k3s-io/k3s/pull/9347)
+
+-----
 ## Release [v1.27.9+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.27.9+k3s1)
 <!-- v1.27.9+k3s1 -->
 
