--- a/docs/release-notes/v1.28.X.md
+++ b/docs/release-notes/v1.28.X.md
@@ -11,6 +11,8 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.28.7+k3s1](v1.28.X.md#release-v1287k3s1) | Feb 29 2024| [v1.28.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#v1287) | [v0.11.4](https://github.com/k3s-io/kine/releases/tag/v0.11.4) | [3.44.0](https://sqlite.org/releaselog/3_44_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2) | [v1.1.12-k3s1](https://github.com/k3s-io/runc/releases/tag/v1.1.12-k3s1) | [v0.24.2](https://github.com/flannel-io/flannel/releases/tag/v0.24.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.26](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.26)  |
+| [v1.28.6+k3s2](v1.28.X.md#release-v1286k3s2) | Feb 06 2024| [v1.28.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#v1286) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2) | [v1.1.12-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.1.12-k3s1) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.28.5+k3s1](v1.28.X.md#release-v1285k3s1) | Dec 27 2023| [v1.28.5](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#v1285) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2) | [v1.1.10](https://github.com/opencontainers/runc/releases/tag/v1.1.10) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.28.4+k3s2](v1.28.X.md#release-v1284k3s2) | Dec 06 2023| [v1.28.4](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#v1284) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.7-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.7-k3s1) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.28.3+k3s2](v1.28.X.md#release-v1283k3s2) | Nov 08 2023| [v1.28.3](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#v1283) | [v0.10.3](https://github.com/k3s-io/kine/releases/tag/v0.10.3) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.7-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.7-k3s1) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
@@ -20,6 +22,63 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.28.7+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.28.7+k3s1)
+<!-- v1.28.7+k3s1 -->
+
+This release updates Kubernetes to v1.28.7, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#changelog-since-v1286).
+
+### Changes since v1.28.6+k3s2:
+
+* Chore: bump Local Path Provisioner version [(#9426)](https://github.com/k3s-io/k3s/pull/9426)
+* Bump cri-dockerd to fix compat with Docker Engine 25 [(#9293)](https://github.com/k3s-io/k3s/pull/9293)
+* Auto Dependancy Bump [(#9419)](https://github.com/k3s-io/k3s/pull/9419)
+* Runtimes refactor using exec.LookPath [(#9431)](https://github.com/k3s-io/k3s/pull/9431)
+  * Directories containing runtimes need to be included in the $PATH environment variable for effective runtime detection.
+* Changed how lastHeartBeatTime works in the etcd condition [(#9424)](https://github.com/k3s-io/k3s/pull/9424)
+* Bump Flannel v0.24.2 + remove multiclustercidr [(#9401)](https://github.com/k3s-io/k3s/pull/9401)
+* Allow executors to define containerd and docker behavior [(#9254)](https://github.com/k3s-io/k3s/pull/9254)
+* Update Kube-router to v2.0.1 [(#9404)](https://github.com/k3s-io/k3s/pull/9404)
+* Backports for 2024-02 release cycle [(#9462)](https://github.com/k3s-io/k3s/pull/9462)
+* Enable longer http timeout requests [(#9444)](https://github.com/k3s-io/k3s/pull/9444)
+* Test_UnitApplyContainerdQoSClassConfigFileIfPresent [(#9440)](https://github.com/k3s-io/k3s/pull/9440)
+* Support PR testing installs [(#9469)](https://github.com/k3s-io/k3s/pull/9469)
+* Update Kubernetes to v1.28.7 [(#9492)](https://github.com/k3s-io/k3s/pull/9492)
+* Fix drone publish for arm [(#9508)](https://github.com/k3s-io/k3s/pull/9508)
+* Remove failing Drone step [(#9516)](https://github.com/k3s-io/k3s/pull/9516)
+* Restore original order of agent startup functions [(#9545)](https://github.com/k3s-io/k3s/pull/9545)
+* Fix netpol startup when flannel is disabled [(#9578)](https://github.com/k3s-io/k3s/pull/9578)
+
+-----
+## Release [v1.28.6+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.28.6+k3s2)
+<!-- v1.28.6+k3s2 -->
+
+This release updates Kubernetes to v1.28.6, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.28.md#changelog-since-v1285).
+
+**Important Notes**
+
+Addresses the runc CVE: [CVE-2024-21626](https://nvd.nist.gov/vuln/detail/CVE-2024-21626) by updating runc to v1.1.12.
+
+### Changes since v1.28.5+k3s1:
+
+* Add a retry around updating a secrets-encrypt node annotations [(#9125)](https://github.com/k3s-io/k3s/pull/9125)
+* Wait for taint to be gone in the node before starting the netpol controller [(#9175)](https://github.com/k3s-io/k3s/pull/9175)
+* Etcd condition [(#9181)](https://github.com/k3s-io/k3s/pull/9181)
+* Backports for 2024-01 [(#9203)](https://github.com/k3s-io/k3s/pull/9203)
+* Pin opa version for missing dependency chain [(#9216)](https://github.com/k3s-io/k3s/pull/9216)
+* Added support for env *_PROXY variables for agent loadbalancer [(#9206)](https://github.com/k3s-io/k3s/pull/9206)
+* Etcd node is nil [(#9228)](https://github.com/k3s-io/k3s/pull/9228)
+* Update to v1.28.6 and Go 1.20.13 [(#9260)](https://github.com/k3s-io/k3s/pull/9260)
+* Use `ipFamilyPolicy: RequireDualStack` for dual-stack kube-dns [(#9269)](https://github.com/k3s-io/k3s/pull/9269)
+* Backports for 2024-01 k3s2 [(#9336)](https://github.com/k3s-io/k3s/pull/9336)
+  * Bump runc to v1.1.12 and helm-controller to v0.15.7
+  * Fix handling of bare hostname or IP as endpoint address in registries.yaml
+* Bump helm-controller to fix issue with ChartContent [(#9346)](https://github.com/k3s-io/k3s/pull/9346)
+
+-----
 ## Release [v1.28.5+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.28.5+k3s1)
 <!-- v1.28.5+k3s1 -->
 
