--- a/docs/release-notes/v1.29.X.md
+++ b/docs/release-notes/v1.29.X.md
@@ -11,10 +11,118 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.29.2+k3s1](v1.29.X.md#release-v1292k3s1) | Feb 29 2024| [v1.29.2](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.29.md#v1292) | [v0.11.4](https://github.com/k3s-io/kine/releases/tag/v0.11.4) | [3.44.0](https://sqlite.org/releaselog/3_44_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2) | [v1.1.12-k3s1](https://github.com/k3s-io/runc/releases/tag/v1.1.12-k3s1) | [v0.24.2](https://github.com/flannel-io/flannel/releases/tag/v0.24.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.26](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.26)  |
+| [v1.29.1+k3s2](v1.29.X.md#release-v1291k3s2) | Feb 06 2024| [v1.29.1](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.29.md#v1291) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2) | [v1.1.12-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.1.12-k3s1) | [v0.24.0](https://github.com/flannel-io/flannel/releases/tag/v0.24.0) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.29.0+k3s1](v1.29.X.md#release-v1290k3s1) | Dec 22 2023| [v1.29.0](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.29.md#v1290) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2) | [v1.1.10](https://github.com/opencontainers/runc/releases/tag/v1.1.10) | [v0.24.0](https://github.com/flannel-io/flannel/releases/tag/v0.24.0) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 
 <br />
 
+## Release [v1.29.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.29.2+k3s1)
+<!-- v1.29.2+k3s1 -->
+
+This release updates Kubernetes to v1.29.2, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.29.md#changelog-since-v1291).
+
+### Changes since v1.29.1+k3s2:
+
+* Bump Local Path Provisioner version [(#8953)](https://github.com/k3s-io/k3s/pull/8953)
+* Add ability to install K3s PR Artifact from GitHub [(#9185)](https://github.com/k3s-io/k3s/pull/9185)
+  * Adds `INSTALL_K3S_PR` option to install a build of K3s from any open PR with CI approval
+* Bump Trivy version [(#9237)](https://github.com/k3s-io/k3s/pull/9237)
+* Bump codecov/codecov-action from 3 to 4 [(#9353)](https://github.com/k3s-io/k3s/pull/9353)
+* Update stable channel [(#9388)](https://github.com/k3s-io/k3s/pull/9388)
+* Fix snapshot reconcile retry [(#9318)](https://github.com/k3s-io/k3s/pull/9318)
+* Add check for etcd-snapshot-dir and fix panic in Walk [(#9317)](https://github.com/k3s-io/k3s/pull/9317)
+* Bump CNI plugins to v1.4.0 [(#9249)](https://github.com/k3s-io/k3s/pull/9249)
+* Fix issue with coredns node hosts controller [(#9354)](https://github.com/k3s-io/k3s/pull/9354)
+  * Fixed issue that could cause coredns pods to fail to start when the embedded helm controller is disabled, due to the configmap not being updated with node hosts entries.
+* Fix on-demand snapshots on ipv6-only nodes [(#9247)](https://github.com/k3s-io/k3s/pull/9247)
+* Bump flannel version [(#9395)](https://github.com/k3s-io/k3s/pull/9395)
+  * Bumped flannel to v0.24.2
+* Build: Align drone base images [(#8959)](https://github.com/k3s-io/k3s/pull/8959)
+* Changed how lastHeartBeatTime works in the etcd condition [(#9263)](https://github.com/k3s-io/k3s/pull/9263)
+* Runtimes refactor using exec.LookPath [(#9311)](https://github.com/k3s-io/k3s/pull/9311)
+  * Directories containing runtimes need to be included in the $PATH environment variable for effective runtime detection.
+* Bump cri-dockerd to fix compat with Docker Engine 25 [(#9290)](https://github.com/k3s-io/k3s/pull/9290)
+* Add codcov secret for integration tests on Push [(#9422)](https://github.com/k3s-io/k3s/pull/9422)
+* Allow executors to define `containerd` and `cridockerd` behavior [(#9184)](https://github.com/k3s-io/k3s/pull/9184)
+* Update Kube-router to v2.0.1 [(#9396)](https://github.com/k3s-io/k3s/pull/9396)
+* : Test_UnitApplyContainerdQoSClassConfigFileIfPresent (Created) [(#8945)](https://github.com/k3s-io/k3s/pull/8945)
+* Readd `k3s secrets-encrypt rotate-keys` with correct support for KMSv2 GA [(#9340)](https://github.com/k3s-io/k3s/pull/9340)
+* Fix iptables check when sbin isn't in user PATH [(#9344)](https://github.com/k3s-io/k3s/pull/9344)
+* Don't create NodePasswordValidationFailed event if agent is disabled [(#9312)](https://github.com/k3s-io/k3s/pull/9312)
+  * The `NodePasswordValidationFailed` Events will no longer be emitted, if the agent is disabled.
+* Expose rootless state dir under ~/.rancher/k3s/rootless [(#9308)](https://github.com/k3s-io/k3s/pull/9308)
+  * When running k3s in rootless mode, expose rootlesskit's state directory as `~/.rancher/k3s/rootless`
+* Expose rootless containerd socket directories for external access [(#9309)](https://github.com/k3s-io/k3s/pull/9309)
+  * Mount k3s rootless containerd & cri-dockerd socket directories to `$XDG_RUNTIME_DIR/k3s/containerd` and `$XDG_RUNTIME_DIR/k3s/cri-dockerd` respectively.
+* Bump kine and set NotifyInterval to what the apiserver expects [(#9349)](https://github.com/k3s-io/k3s/pull/9349)
+* Update Kubernetes to v1.29.2 [(#9493)](https://github.com/k3s-io/k3s/pull/9493)
+* Fix drone publish for arm [(#9503)](https://github.com/k3s-io/k3s/pull/9503)
+* Remove failing Drone step [(#9517)](https://github.com/k3s-io/k3s/pull/9517)
+* Restore original order of agent startup functions [(#9539)](https://github.com/k3s-io/k3s/pull/9539)
+* Fix netpol startup when flannel is disabled [(#9571)](https://github.com/k3s-io/k3s/pull/9571)
+
+-----
+## Release [v1.29.1+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.29.1+k3s2)
+<!-- v1.29.1+k3s2 -->
+
+This release updates Kubernetes to v1.29.1, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.29.md#changelog-since-v1290).
+
+**Important Notes**
+
+Addresses the runc CVE: [CVE-2024-21626](https://nvd.nist.gov/vuln/detail/CVE-2024-21626) by updating runc to v1.1.12.
+
+### Changes since v1.29.0+k3s1:
+
+* Bump Sonobuoy version [(#8910)](https://github.com/k3s-io/k3s/pull/8910)
+* Bump actions/setup-go from 4 to 5 [(#9036)](https://github.com/k3s-io/k3s/pull/9036)
+* Chore: Update Code of Conduct to Redirect to CNCF CoC [(#9104)](https://github.com/k3s-io/k3s/pull/9104)
+  * NONE
+* Update stable channel to v1.28.5+k3s1 and add v1.29 channel [(#9110)](https://github.com/k3s-io/k3s/pull/9110)
+* Added support for env *_PROXY variables for agent loadbalancer [(#9070)](https://github.com/k3s-io/k3s/pull/9070)
+  * HTTP_PROXY, HTTPS_PROXY and NO_PROXY environment variables are now taken into account by the agent loadbalancer if K3S_AGENT_HTTP_PROXY_ALLOWED env variable is set to true.
+  * This however doesn't affect local requests as the function used prevents that: https://pkg.go.dev/net/http#ProxyFromEnvironment.
+* Add a retry around updating a secrets-encrypt node annotations [(#9039)](https://github.com/k3s-io/k3s/pull/9039)
+* Silence SELinux warning on INSTALL_K3S_SKIP_SELINUX_RPM [(#8703)](https://github.com/k3s-io/k3s/pull/8703)
+* Add ServiceLB support for PodHostIPs FeatureGate [(#8917)](https://github.com/k3s-io/k3s/pull/8917)
+* Added support for env *_PROXY variables for agent loadbalancer [(#9118)](https://github.com/k3s-io/k3s/pull/9118)
+* Redirect error stream to null when checking nm-cloud systemd unit [(#8815)](https://github.com/k3s-io/k3s/pull/8815)
+  * Remove confusing "nm-cloud-setup.service: No such file or directory" journalctl log
+* Dockerfile.dapper: set $HOME properly [(#9090)](https://github.com/k3s-io/k3s/pull/9090)
+* Add system-agent-installer-k3s step to GA release instructions [(#9153)](https://github.com/k3s-io/k3s/pull/9153)
+* Fix install script checksum [(#9159)](https://github.com/k3s-io/k3s/pull/9159)
+* Fix the OTHER etcd snapshot s3 log message that prints the wrong variable [(#8944)](https://github.com/k3s-io/k3s/pull/8944)
+* Handle logging flags when parsing kube-proxy args [(#8916)](https://github.com/k3s-io/k3s/pull/8916)
+* Fix nil map in full snapshot configmap reconcile [(#9049)](https://github.com/k3s-io/k3s/pull/9049)
+* Add support for containerd cri registry config_path [(#8973)](https://github.com/k3s-io/k3s/pull/8973)
+* Add more paths to crun runtime detection [(#9086)](https://github.com/k3s-io/k3s/pull/9086)
+* Add runtime checking of golang version [(#9054)](https://github.com/k3s-io/k3s/pull/9054)
+* Fix OS PRETTY_NAME on tagged releases [(#9062)](https://github.com/k3s-io/k3s/pull/9062)
+* Print error when downloading file error inside install script [(#6874)](https://github.com/k3s-io/k3s/pull/6874)
+* Wait for cloud-provider taint to be gone before starting the netpol controller [(#9076)](https://github.com/k3s-io/k3s/pull/9076)
+* Bump Trivy version [(#8812)](https://github.com/k3s-io/k3s/pull/8812)
+* Use `ipFamilyPolicy: RequireDualStack` for dual-stack kube-dns [(#8984)](https://github.com/k3s-io/k3s/pull/8984)
+* Handle etcd status condition when node is not ready and disable etcd [(#9084)](https://github.com/k3s-io/k3s/pull/9084)
+* Update s3 e2e test [(#9025)](https://github.com/k3s-io/k3s/pull/9025)
+* Add e2e startup test for rootless k3s [(#8383)](https://github.com/k3s-io/k3s/pull/8383)
+* Add spegel distributed registry mirror [(#8977)](https://github.com/k3s-io/k3s/pull/8977)
+* Bump quic-go for CVE-2023-49295 [(#9208)](https://github.com/k3s-io/k3s/pull/9208)
+* Enable network policy controller metrics [(#9195)](https://github.com/k3s-io/k3s/pull/9195)
+  * Kube-router network policy controller metrics are now exposed via the default node metrics endpoint
+* Fix nonexistent dependency repositories [(#9213)](https://github.com/k3s-io/k3s/pull/9213)
+* Move proxy dialer out of init() and fix crash when using `K3S_AGENT_HTTP_PROXY_ALLOWED=true` [(#9219)](https://github.com/k3s-io/k3s/pull/9219)
+* Error getting node in setEtcdStatusCondition [(#9210)](https://github.com/k3s-io/k3s/pull/9210)
+* Update to v1.29.1 and Go 1.21.6 [(#9259)](https://github.com/k3s-io/k3s/pull/9259)
+* New stale action [(#9278)](https://github.com/k3s-io/k3s/pull/9278)
+* Fix handling of bare hostname or IP as endpoint address in registries.yaml [(#9323)](https://github.com/k3s-io/k3s/pull/9323)
+* Bump runc to v1.1.12 and helm-controller to v0.15.7 [(#9332)](https://github.com/k3s-io/k3s/pull/9332)
+* Bump helm-controller to fix issue with ChartContent [(#9345)](https://github.com/k3s-io/k3s/pull/9345)
+
+-----
 ## Release [v1.29.0+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.29.0+k3s1)
 <!-- v1.29.0+k3s1 -->
 
