--- a/docs/release-notes/v1.26.X.md
+++ b/docs/release-notes/v1.26.X.md
@@ -11,6 +11,8 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.26.14+k3s1](v1.26.X.md#release-v12614k3s1) | Feb 29 2024| [v1.26.14](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v12614) | [v0.11.4](https://github.com/k3s-io/kine/releases/tag/v0.11.4) | [3.44.0](https://sqlite.org/releaselog/3_44_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2.26](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2.26) | [v1.1.12-k3s1](https://github.com/k3s-io/runc/releases/tag/v1.1.12-k3s1) | [v0.24.2](https://github.com/flannel-io/flannel/releases/tag/v0.24.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.26](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.26)  |
+| [v1.26.13+k3s2](v1.26.X.md#release-v12613k3s2) | Feb 06 2024| [v1.26.13](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v12613) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2.26](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2.26) | [v1.1.12-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.1.12-k3s1) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.8](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.8) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.26.12+k3s1](v1.26.X.md#release-v12612k3s1) | Dec 27 2023| [v1.26.12](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v12612) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.11-k3s2.26](https://github.com/k3s-io/containerd/releases/tag/v1.7.11-k3s2.26) | [v1.1.10](https://github.com/opencontainers/runc/releases/tag/v1.1.10) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.26.11+k3s2](v1.26.X.md#release-v12611k3s2) | Dec 07 2023| [v1.26.11](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v12611) | [v0.11.0](https://github.com/k3s-io/kine/releases/tag/v0.11.0) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.7-k3s1.26](https://github.com/k3s-io/containerd/releases/tag/v1.7.7-k3s1.26) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.26.10+k3s2](v1.26.X.md#release-v12610k3s2) | Nov 08 2023| [v1.26.10](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v12610) | [v0.10.3](https://github.com/k3s-io/kine/releases/tag/v0.10.3) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.7-k3s1.26](https://github.com/k3s-io/containerd/releases/tag/v1.7.7-k3s1.26) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.10.5](https://github.com/traefik/traefik/releases/tag/v2.10.5) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
@@ -29,6 +31,64 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.26.14+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.14+k3s1)
+<!-- v1.26.14+k3s1 -->
+
+This release updates Kubernetes to v1.26.14, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#changelog-since-v12613).
+
+### Changes since v1.26.13+k3s2:
+
+* Chore: bump Local Path Provisioner version [(#9428)](https://github.com/k3s-io/k3s/pull/9428)
+* Bump cri-dockerd to fix compat with Docker Engine 25 [(#9292)](https://github.com/k3s-io/k3s/pull/9292)
+* Auto Dependancy Bump [(#9421)](https://github.com/k3s-io/k3s/pull/9421)
+* Runtimes refactor using exec.LookPath [(#9429)](https://github.com/k3s-io/k3s/pull/9429)
+  * Directories containing runtimes need to be included in the $PATH environment variable for effective runtime detection.
+* Changed how lastHeartBeatTime works in the etcd condition [(#9423)](https://github.com/k3s-io/k3s/pull/9423)
+* Allow executors to define containerd and docker behavior [(#9252)](https://github.com/k3s-io/k3s/pull/9252)
+* Update Kube-router to v2.0.1 [(#9406)](https://github.com/k3s-io/k3s/pull/9406)
+* Backports for 2024-02 release cycle [(#9464)](https://github.com/k3s-io/k3s/pull/9464)
+* Bump flannel version + remove multiclustercidr [(#9409)](https://github.com/k3s-io/k3s/pull/9409)
+* Enable longer http timeout requests [(#9446)](https://github.com/k3s-io/k3s/pull/9446)
+* Test_UnitApplyContainerdQoSClassConfigFileIfPresent [(#9442)](https://github.com/k3s-io/k3s/pull/9442)
+* Support PR testing installs [(#9471)](https://github.com/k3s-io/k3s/pull/9471)
+* Update Kubernetes to v1.26.14 [(#9490)](https://github.com/k3s-io/k3s/pull/9490)
+* Fix drone publish for arm [(#9510)](https://github.com/k3s-io/k3s/pull/9510)
+* Remove failing Drone step [(#9514)](https://github.com/k3s-io/k3s/pull/9514)
+* Restore original order of agent startup functions [(#9547)](https://github.com/k3s-io/k3s/pull/9547)
+* Fix netpol startup when flannel is disabled [(#9580)](https://github.com/k3s-io/k3s/pull/9580)
+
+-----
+## Release [v1.26.13+k3s2](https://github.com/k3s-io/k3s/releases/tag/v1.26.13+k3s2)
+<!-- v1.26.13+k3s2 -->
+
+This release updates Kubernetes to v1.26.13, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#changelog-since-v12612).
+
+**Important Notes**
+
+Addresses the runc CVE: [CVE-2024-21626](https://nvd.nist.gov/vuln/detail/CVE-2024-21626) by updating runc to v1.1.12.
+
+### Changes since v1.26.12+k3s1:
+
+* Add a retry around updating a secrets-encrypt node annotations [(#9123)](https://github.com/k3s-io/k3s/pull/9123)
+* Added support for env *_PROXY variables for agent loadbalancer [(#9116)](https://github.com/k3s-io/k3s/pull/9116)
+* Wait for taint to be gone in the node before starting the netpol controller [(#9177)](https://github.com/k3s-io/k3s/pull/9177)
+* Etcd condition [(#9183)](https://github.com/k3s-io/k3s/pull/9183)
+* Backports for 2024-01 [(#9212)](https://github.com/k3s-io/k3s/pull/9212)
+* Move proxy dialer out of init() and fix crash [(#9221)](https://github.com/k3s-io/k3s/pull/9221)
+* Pin opa version for missing dependency chain [(#9218)](https://github.com/k3s-io/k3s/pull/9218)
+* Etcd node is nil [(#9230)](https://github.com/k3s-io/k3s/pull/9230)
+* Update to v1.26.13 and Go 1.20.13 [(#9262)](https://github.com/k3s-io/k3s/pull/9262)
+* Use `ipFamilyPolicy: RequireDualStack` for dual-stack kube-dns [(#9271)](https://github.com/k3s-io/k3s/pull/9271)
+* Backports for 2024-01 k3s2 [(#9338)](https://github.com/k3s-io/k3s/pull/9338)
+  * Bump runc to v1.1.12 and helm-controller to v0.15.7
+  * Fix handling of bare hostname or IP as endpoint address in registries.yaml
+* Bump helm-controller to fix issue with ChartContent [(#9348)](https://github.com/k3s-io/k3s/pull/9348)
+
+-----
 ## Release [v1.26.12+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.26.12+k3s1)
 <!-- v1.26.12+k3s1 -->
 
