Run spellcheck before attempting to open a PR on release notes
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/docs/release-notes/v1.27.X.md
+++ b/docs/release-notes/v1.27.X.md
@@ -62,7 +62,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * Fix issue with k3s-etcd informers not starting
   * `--Enable-pprof` can now be set on agents to enable the debug/pprof endpoints. When set, agents will listen on the supervisor port.
   * `--Supervisor-metrics` can now be set on servers to enable serving internal metrics on the supervisor endpoint; when set agents will listen on the supervisor port.
-  * Fix netpol crash when node remains tained unintialized
+  * Fix netpol crash when node remains tainted uninitialized
   * The embedded load-balancer will now fall back to trying all servers with health-checks ignored, if all servers have been marked unavailable due to failed health checks.
 * More backports for 2024-06 release cycle [(#10290)](https://github.com/k3s-io/k3s/pull/10290)
 * Add snapshot retention etcd-s3-folder fix [(#10314)](https://github.com/k3s-io/k3s/pull/10314)
