--- a/docs/release-notes/v1.29.X.md
+++ b/docs/release-notes/v1.29.X.md
@@ -52,14 +52,14 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
   * Fix issue with k3s-etcd informers not starting
   * `--Enable-pprof` can now be set on agents to enable the debug/pprof endpoints. When set, agents will listen on the supervisor port.
   * `--Supervisor-metrics` can now be set on servers to enable serving internal metrics on the supervisor endpoint; when set agents will listen on the supervisor port.
-  * Fix netpol crash when node remains tained unintialized
+  * Fix netpol crash when node remains tainted uninitialized
   * The embedded load-balancer will now fall back to trying all servers with health-checks ignored, if all servers have been marked unavailable due to failed health checks.
 * More backports for 2024-06 release cycle [(#10288)](https://github.com/k3s-io/k3s/pull/10288)
 * Add snapshot retention etcd-s3-folder fix [(#10316)](https://github.com/k3s-io/k3s/pull/10316)
 * Add test for `isValidResolvConf` (#10302) [(#10329)](https://github.com/k3s-io/k3s/pull/10329)
 * Fix race condition panic in loadbalancer.nextServer [(#10322)](https://github.com/k3s-io/k3s/pull/10322)
 * Fix typo, use `rancher/permissions` [(#10298)](https://github.com/k3s-io/k3s/pull/10298)
-* Expand GHA go caching to includ newest release branch [(#10334)](https://github.com/k3s-io/k3s/pull/10334)
+* Expand GHA go caching to include newest release branch [(#10334)](https://github.com/k3s-io/k3s/pull/10334)
 * Update Kubernetes to v1.29.6 [(#10348)](https://github.com/k3s-io/k3s/pull/10348)
 * Fix agent supervisor port using apiserver port instead [(#10354)](https://github.com/k3s-io/k3s/pull/10354)
 * Fix issue that allowed multiple simultaneous snapshots to be allowed [(#10376)](https://github.com/k3s-io/k3s/pull/10376)
