--- a/docs/release-notes/v1.30.X.md
+++ b/docs/release-notes/v1.30.X.md
@@ -67,7 +67,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Bump alpine from 3.18 to 3.20 in /package [(#10211)](https://github.com/k3s-io/k3s/pull/10211)
 * Bump ubuntu from 22.04 to 24.04 in /tests/e2e/scripts [(#10040)](https://github.com/k3s-io/k3s/pull/10040)
 * Bump Trivy version [(#10039)](https://github.com/k3s-io/k3s/pull/10039)
-* Fix netpol crash when node remains tained unintialized [(#10073)](https://github.com/k3s-io/k3s/pull/10073)
+* Fix netpol crash when node remains tainted uninitialized [(#10073)](https://github.com/k3s-io/k3s/pull/10073)
 * Fix issue caused by sole server marked as failed under load [(#10241)](https://github.com/k3s-io/k3s/pull/10241)
   * The embedded load-balancer will now fall back to trying all servers with health-checks ignored, if all servers have been marked unavailable due to failed health checks.
 * Add write-kubeconfig-group flag to server [(#9233)](https://github.com/k3s-io/k3s/pull/9233)
@@ -79,7 +79,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Add ADR for support for etcd s3 config secret [(#9364)](https://github.com/k3s-io/k3s/pull/9364)
 * Add test for `isValidResolvConf` [(#10302)](https://github.com/k3s-io/k3s/pull/10302)
 * Add snapshot retention etcd-s3-folder fix [(#10293)](https://github.com/k3s-io/k3s/pull/10293)
-* Expand GHA golang caching to includ newest release branch [(#10307)](https://github.com/k3s-io/k3s/pull/10307)
+* Expand GHA golang caching to include newest release branch [(#10307)](https://github.com/k3s-io/k3s/pull/10307)
 * Fix race condition panic in loadbalancer.nextServer [(#10318)](https://github.com/k3s-io/k3s/pull/10318)
 * Fix typo, use `rancher/permissions` [(#10296)](https://github.com/k3s-io/k3s/pull/10296)
 * Update Kubernetes to v1.30.2 [(#10349)](https://github.com/k3s-io/k3s/pull/10349)
