--- a/i18n/ja/docusaurus-plugin-content-docs/current/release-notes/v1.30.X.md
+++ b/i18n/ja/docusaurus-plugin-content-docs/current/release-notes/v1.30.X.md
@@ -87,7 +87,11 @@ sidebar_position: 1
 * 複数の同時スナップショットが許可される問題の修正 [(#10372)](https://github.com/k3s-io/k3s/pull/10372)
 
 -----
-## リリース [v1.
+## リリース [v1.30.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.30.1+k3s1)
+<!-- v1.30.1+k3s1 -->
+
+このリリースでは、Kubernetesをv1.30.1に更新し、多くの問題を修正しました。
+
 詳細については、[Kubernetes リリースノート](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.30.md#changelog-since-v1300)をご覧ください。
 
 ### v1.30.0+k3s1 以降の変更点:
